cluster/apps/security/authentik/outpost-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: authentik-outpost
annotations:
    cert-manager.io/common-name: generic-sso.kng.house
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/hostname: generic-sso.kng.house
spec:
    rules:
        - host: generic-sso.kng.house
          http:
              paths:
                  - path: /outpost.goauthentik.io
                    pathType: Prefix
                    backend:
                        service:
                            name: ak-outpost-generic-sso
                            port:
                                number: 9000
